chore: updates for release

--- a/.npmrc
+++ b/.npmrc
@@ -2,4 +2,4 @@
 @auditlogic:registry=https://npm.pkg.github.com/
 @devsupply:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:always-auth=true
-//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+//npm.pkg.github.com/:_authToken=${ZB_TOKEN}
