--- a/package/miraxr/.npmrc
+++ b/package/miraxr/.npmrc
@@ -1,5 +1,5 @@
-@auditmation:registry=https://npm.pkg.github.com/
-@auditlogic:registry=https://npm.pkg.github.com/
-@devsupply:registry=https://npm.pkg.github.com/
-//npm.pkg.github.com/:always-auth=true
-//npm.pkg.github.com/:_authToken=${ZB_TOKEN}
+@auditmation:registry=https://pkg.zerobias.org
+@auditlogic:registry=https://pkg.zerobias.org
+@devsupply:registry=https://pkg.zerobias.org
+//pkg.zerobias.org/:always-auth=true
+//pkg.zerobias.org/:_authToken=${ZB_TOKEN}
