--- a/package/miraxr/package.json
+++ b/package/miraxr/package.json
@@ -1,9 +1,19 @@
 {
   "name": "@zerobias-org/login-miraxr",
-  "version": "1.0.1",
-  "description": "Login package for Mira XR",
+  "version": "1.0.2",
   "author": "team@zerobias.com",
   "license": "ISC",
+  "description": "Login package for Mira XR",
+  "main": "server.js",
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node ./node_modules/@auditmation/dana-login-sdk/metalsmith.js",
+    "build-local": "node ./node_modules/@auditmation/dana-login-sdk/metalsmith.js --local",
+    "start": "npm run build-local && npx http-server dist -p 8080"
+  },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
@@ -12,25 +22,7 @@
     "url": "git@github.com:zerobias-org/login.git",
     "directory": "package/miraxr/"
   },
-  "files": [
-    "index.html",
-    "logo.svg"
-  ],
   "dependencies": {
-    "@auditmation/dana-login-client": "2.1.11",
-    "@auditmation/dana-login-sdk": "0.5.8",
-    "@auditmation/util-logger": "^4.0.0",
-    "auth0-js": "9.19.0",
-    "cookie-parser": "1.4.6",
-    "express": "4.17.3",
-    "fs": "0.0.1-security",
-    "hbs": "4.2.0",
-    "i18n": "0.14.1",
-    "i18next": "21.6.12",
-    "i18next-http-backend": "1.3.2",
-    "marked": "4.0.12"
-  },
-  "scripts": {
-    "start": "node server.js"
+    "@auditmation/dana-login-sdk": "0.5.12"
   }
 }
