chore(ci): pipeline testing

--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -3,8 +3,8 @@ name: Dispatch Deploys
 on:
   push:
     branches: [main, qa, dev]
-#    paths:
-#      - 'package/*/**'
+    paths:
+      - 'package/*/**'
 
 permissions:
   contents: read
