--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -25,8 +25,8 @@ jobs:
         with:
           dir_names: true
 #          dir_names_max_depth: 1
-#          files: |
-#            package/**
+          files: |
+            package/**
 #          since_last_remote_commit: true
 
       - name: Debug changed outputs
