--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -24,10 +24,9 @@ jobs:
         uses: tj-actions/changed-files@v46
         with:
           dir_names: true
-#          dir_names_max_depth: 1
+          dir_names_max_depth: 1
           files: |
             package/**
-#          since_last_remote_commit: true
 
       - name: Debug changed outputs
         run: |
