--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -83,6 +83,5 @@ jobs:
               -f app-name="$app_name" \
               -f env-name="${ENV_NAME}" \
               -f aws-account-id="${{ env.AWS_ACCOUNT_ID }}" \
-              -f s3-bucket="us-east-1-${GITHUB_REF##*/}-custom-ui" \
-              --title "App Deploy - ${app_name}"
+              -f s3-bucket="us-east-1-${GITHUB_REF##*/}-custom-ui"
           done
