--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -79,7 +79,7 @@ jobs:
           for app_name in "${APPS[@]}"; do
             echo "🚀 Triggering deploy for $app_name"
 
-            gh workflow run deploy.yml --ref ${GITHUB_REF##*/} \
+            gh workflow run --ref ${GITHUB_REF##*/} deploy.yml \
               -f app-name="$app_name" \
               -f env-name="${ENV_NAME}" \
               -f aws-account-id="${{ env.AWS_ACCOUNT_ID }}" \
