--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -7,7 +7,7 @@ on:
       - 'package/*/**'
 
 permissions:
-  contents: read
+  contents: write
   actions: write
 
 jobs:
@@ -64,25 +64,34 @@ jobs:
             echo "AWS_ACCOUNT_ID=013360300799" >> $GITHUB_ENV
           fi
 
-      - name: Dispatch deploy workflow for each app
-        run: |
-          set -x
-          export GH_TOKEN="${{ secrets.GITHUB_TOKEN }}"
-          
-          IFS=',' read -ra APPS <<< "$CHANGED_APPS"
-          
-          if [ -z "${APPS[*]}" ]; then
-            echo "✅ No apps changed, skipping deploy."
-            exit 0
-          fi
+      - name: Dispatch deploy event for each app
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const apps = process.env.CHANGED_APPS.split(',');
+            const envName = process.env.ENV_NAME;
+            const awsAccountId = process.env.AWS_ACCOUNT_ID;
+            const ref = process.env.TARGET_REF;
+            
+            for (const appName of apps) {
+              console.log(`🚀 Dispatching deploy for app: ${appName}`);
+            
+              await github.rest.repos.createDispatchEvent({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                event_type: "deploy-app",
+                client_payload: {
+                  app_name: appName,
+                  env_name: envName,
+                  aws_account_id: awsAccountId,
+                  s3_bucket: `us-east-1-${envName}-custom-ui`,
+                  ref: ref
+                }
+              });
+            }
+        env:
+          CHANGED_APPS: ${{ env.CHANGED_APPS }}
+          ENV_NAME: ${{ env.ENV_NAME }}
+          AWS_ACCOUNT_ID: ${{ env.AWS_ACCOUNT_ID }}
+          TARGET_REF: ${{ env.TARGET_REF }}
 
-          for app_name in "${APPS[@]}"; do
-            echo "🚀 Triggering deploy for $app_name"
-
-            gh workflow run -r ${GITHUB_REF##*/} \
-              -f app-name="$app_name" \
-              -f env-name="${ENV_NAME}" \
-              -f aws-account-id="${{ env.AWS_ACCOUNT_ID }}" \
-              -f s3-bucket="us-east-1-${GITHUB_REF##*/}-custom-ui" \
-              deploy.yml
-          done
