--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,37 +20,35 @@ on:
         required: true
         type: string
 
-  repository_dispatch:
-    types: [deploy-app]
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
       AWS_REGION: us-east-1
+
     steps:
-      - name: Checkout code
+      - name: Normalize workflow_dispatch inputs
+        run: |
+          echo "APP_NAME=${{ github.event.inputs.app-name }}" >> $GITHUB_ENV
+          echo "ENV_NAME=${{ github.event.inputs.env-name }}" >> $GITHUB_ENV
+          echo "AWS_ACCOUNT_ID=${{ github.event.inputs.aws-account-id }}" >> $GITHUB_ENV
+          echo "S3_BUCKET=${{ github.event.inputs.s3-bucket }}" >> $GITHUB_ENV
+
+      - name: Debug input values
+        run: |
+          echo "📦 App: $APP_NAME"
+          echo "🌍 Env: $ENV_NAME"
+          echo "🏦 Account: $AWS_ACCOUNT_ID"
+          echo "🪣 Bucket: $S3_BUCKET"
+
+      - name: Checkout source code
         uses: actions/checkout@v4
 
-      - name: Normalize input values
-        run: |
-          echo "APP_NAME=${{ github.event.inputs.app-name || github.event.client_payload.app_name }}" >> $GITHUB_ENV
-          echo "ENV_NAME=${{ github.event.inputs.env-name || github.event.client_payload.env_name }}" >> $GITHUB_ENV
-          echo "AWS_ACCOUNT_ID=${{ github.event.inputs.aws-account-id || github.event.client_payload.aws_account_id }}" >> $GITHUB_ENV
-          echo "S3_BUCKET=${{ github.event.inputs.s3-bucket || github.event.client_payload.s3_bucket }}" >> $GITHUB_ENV
-
-      - name: Debug resolved input values
-        run: |
-          echo "App Name: $APP_NAME"
-          echo "Env Name: $ENV_NAME"
-          echo "AWS Account ID: $AWS_ACCOUNT_ID"
-          echo "S3 Bucket: $S3_BUCKET"
-
       - name: Deploy app using composite action
-        uses: zerobias-org/devops/actions/static-s3-app-release@feature/s3-static-site-deploy # @TODO: Update reference
+        uses: zerobias-org/devops/actions/static-s3-app-release@feature/s3-static-site-deploy # TODO: update reference if needed
         with:
-          app-name: ${{ github.event.inputs.app-name }}
+          app-name: ${{ env.APP_NAME }}
           app-base-path: package
-          s3-bucket: ${{ github.event.inputs.s3-bucket }}
+          s3-bucket: ${{ env.S3_BUCKET }}
           aws-region: ${{ env.AWS_REGION }}
-          role-to-assume: arn:aws:iam::${{ github.event.inputs.aws-account-id }}:role/DevOIDCRole
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/gh-static-ui-${{ github.event.inputs.env-name }}-deploy
