--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,15 +25,12 @@ jobs:
     runs-on: ubuntu-latest
     env:
       AWS_REGION: us-east-1
+      APP_NAME: ${{ github.event.inputs.app-name }}
+      ENV_NAME: ${{ github.event.inputs.env-name }}
+      AWS_ACCOUNT_ID: ${{ github.event.inputs.aws-account-id }}
+      S3_BUCKET: ${{ github.event.inputs.s3-bucket }}
 
     steps:
-      - name: Normalize workflow_dispatch inputs
-        run: |
-          echo "APP_NAME=${{ github.event.inputs.app-name }}" >> $GITHUB_ENV
-          echo "ENV_NAME=${{ github.event.inputs.env-name }}" >> $GITHUB_ENV
-          echo "AWS_ACCOUNT_ID=${{ github.event.inputs.aws-account-id }}" >> $GITHUB_ENV
-          echo "S3_BUCKET=${{ github.event.inputs.s3-bucket }}" >> $GITHUB_ENV
-
       - name: Debug input values
         run: |
           echo "📦 App: $APP_NAME"
@@ -45,10 +42,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy app using composite action
-        uses: zerobias-org/devops/actions/static-s3-app-release@feature/s3-static-site-deploy # TODO: update reference if needed
+        uses: zerobias-org/devops/actions/static-s3-app-release@feature/s3-static-site-deploy
         with:
           app-name: ${{ env.APP_NAME }}
           app-base-path: package
           s3-bucket: ${{ env.S3_BUCKET }}
           aws-region: ${{ env.AWS_REGION }}
-          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/gh-static-ui-${{ github.event.inputs.env-name }}-deploy
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/DevOIDCRole
