--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,6 @@ jobs:
       ENV_NAME: ${{ github.event.inputs.env-name }}
       AWS_ACCOUNT_ID: ${{ github.event.inputs.aws-account-id }}
       S3_BUCKET: ${{ github.event.inputs.s3-bucket }}
-      NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
     steps:
       - name: Debug input values
@@ -43,10 +42,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Export ZB_TOKEN to environment
-        run: echo "ZB_TOKEN=${ZB_TOKEN}" >> $GITHUB_ENV
+        run: echo "ZB_TOKEN=${{ secrets.ZB_TOKEN }}" >> $GITHUB_ENV
         shell: bash
-        env:
-          ZB_TOKEN: ${{ secrets.ZB_TOKEN }}
 
       - name: Deploy app
         uses: zerobias-org/devops/actions/static-s3-app-release@feature/s3-static-site-deploy
