--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -14,6 +14,19 @@ jobs:
   detect-and-dispatch:
     runs-on: ubuntu-latest
     steps:
+
+      - name: import secrets
+        uses: hashicorp/vault-action@v2.4.3
+        with:
+          method: jwt
+          url: ${{ secrets.VAULT_ADDR }}
+          role: publishing-role
+          path: gh-actions
+          secrets: |
+            operations-kv/data/ci/github readPackagesToken | READ_TOKEN ;
+            operations-kv/data/ci/slack devopsNotifications | SLACK_DEVOPS_NOTIFICATIONS ;
+            operations-kv/data/ci/slack releasesWebhook | SLACK_RELEASES_WEBHOOK ;
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
